<resources>
    <string name="app_name">SendingObjects</string>
    <string name="name">Name</string>
    <string name="radiobutton">RadioButton</string>

    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="save">SAVE</string>
    <string name="roll_no">Roll No</string>
    <string name="phone_no">Phone No</string>

    <string name="textview">TextView</string>
    <string name="student_name">Student Name:-</string>
    <string name="roll_n0">Roll N0:-</string>
    <string name="phone_no1">Phone No:-</string>

</resources>